--- a/index.html
+++ b/index.html
@@ -1711,7 +1711,7 @@
         </div>
 
         <!-- main carausel -->
-        <div class="car-main">
+        <div class="car-main" style="display: none;">
             <ol class="lglistcar hidden-xs">
                 <li>
                     <span>Galaxy Z Fold5</span>
